# pdf2foundry-gui

./: .codespellrc  .coverage  .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  README.md  pymarkdown.yaml  pyproject.toml  run.py
.cursor/rules/: 00-core-project-overview.mdc  10-python-standards.mdc  20-cli-contract.mdc  60-errors-logging.mdc  70-precommit-quality.mdc  80-markdown-quality.mdc  90-task-completion-quality-gates.mdc  cursor_rules.mdc  python-qa-engineer.mdc  self_improve.mdc
docs/: gui-control-map.md  gui-form-specs.md  gui-prd.md  gui-wireframes.md
resources/: README.md
scripts/: check_file_length.py
src/core/: backend_interface.py  config.py  config_manager.py  conversion_config.py  conversion_state.py  error_handler.py  error_translation.py  errors.py  gui_mapping.py  page_utils.py  pdf_utils.py  preset_manager.py  threading.py  validation.py
src/gui/: conversion_handler.py  main.py  main_window.py  main_window_new.py  recovery_manager.py  widgets.py
src/gui/conversion/: __init__.py  ui_manager.py  validation.py
src/gui/dialogs/: __init__.py  error_dialogs.py  settings.py
src/gui/handlers/: __init__.py  file_handler.py  output_handler.py  ui_state_handler.py
src/gui/output/: __init__.py  output_folder_controller.py
src/gui/utils/: __init__.py  fs.py  styling.py
src/gui/validation/: __init__.py  input_validator.py  validators.py
src/gui/widgets/: __init__.py  directory_context_menu.py  directory_selector.py  directory_ui_setup.py  directory_validation.py  drag_drop.py  keyboard_shortcuts.py  layout_components.py  log_console.py  log_console_new.py  log_controls.py  log_search.py  log_types.py  main_window_ui.py  notification_manager.py  status_indicator.py  window_properties.py
src/gui/widgets/ui_components/: __init__.py  button_setup.py  module_config_setup.py  settings_manager.py
tests/: test_drag_drop_label.py  test_pdf_utils.py
tests/unit/: input_validator_fixtures.py  recovery_manager_fixtures.py  test_backend_interface.py  test_browse_button.py  test_config_manager.py  test_conversion_config.py  test_conversion_handler_integration.py  test_conversion_handler_signals.py  test_conversion_validation.py  test_drag_drop_label.py  test_error_dialogs_convenience.py  test_error_dialogs_core.py  test_error_dialogs_display.py  test_error_dialogs_recovery.py  test_error_handler_core.py  test_error_handler_integration.py  test_error_handler_logging.py  test_error_translation.py  test_fs_utils.py  test_gui_mapping.py  test_input_validator_basic.py  test_input_validator_signals.py  test_input_validator_styling.py  test_integration_api.py  test_layout_components.py  test_log_console.py  test_main_window.py  test_notification_manager.py  test_output_directory_selector.py  test_output_directory_selector_enhanced.py  test_output_folder_controller.py  test_output_handler.py  test_pdf_utils.py  test_preset_manager.py  test_recovery_manager_flow.py  test_recovery_manager_init.py  test_recovery_manager_retry.py  test_recovery_manager_signals.py  test_settings_dialog.py  test_settings_dialog_presets.py  (+9 more)
